<resources>
    <string name="app_name">Project2Activity</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Clear</string>
    <string name="btn_signup">Sign up</string>
    <string name="txt_field">Add your photo!</string>
    <string name="help_txt">Create name photo</string>
    <string name="txt_field2">Self-destruction is starting 10 9 8</string>
    <string name="btn_blue">Blue</string>
    <string name="btn_change_photo">Change photo</string>
    <string name="btn_green">Green</string>
    <string name="btn_back">Back</string>
    <string name="empty_txt"> </string>
    <string name="text_top">BUUU!!!</string>
    <string name="txt_sms">Add your messege here</string>
    <string name="text_vova">Zombieee!!!</string>
    <string name="text_dog">Stand up and go for a walk!</string>
    <string name="start_txt">Start</string>
    <string name="reg_sheet">Sign in/Sing up</string>
    <string name="res_ok">Welcome!</string>
    <string name="res_bad_login">Login is incorrect</string>
    <string name="res_bad_password">Password is incorrect</string>
    <string name="txt_login">Press login</string>
    <string name="txt_pass">Press password</string>
    <string name="txt_singup">Register</string>
    <string name="txt_confirm">Confirm password</string>
    <string name="btn_login">Login</string>
    <string name="name_app_timer">Timer</string>
    <string name="txt_null_time">0</string>
    <string name="txt_cat">Relax and take your time:)</string>
    <string name="btn_contacts">Add contact</string>
    <string name="btn_messege">Add messege</string>
    <string name="btn_ok">OK</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_add_contact">Add contact</string>
    <string name="btn_push">Push</string>
    <string name="str_notename">Tips</string>
</resources>
