<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/reg_sheet"
        android:textSize="@dimen/text_size_30"/>
    <TextView
        android:id="@+id/responce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_txt"
        android:textSize="@dimen/text_size_20"/>

 <GridLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/txt_login"
         android:layout_column="0"
         android:layout_row="0"
         android:textSize="@dimen/text_size_20"/>

     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:layout_column="1"
         android:layout_row="0"
         android:ems="10"
         android:id="@+id/login"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/txt_pass"
         android:layout_column="0"
         android:layout_row="1"
         android:textSize="@dimen/text_size_20"/>

     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
         android:layout_column="1"
         android:layout_row="1"
         android:id="@+id/pass1"/>

     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="2"
         android:id="@+id/addtext"/>

     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="2"
         android:id="@+id/addfield"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/txt_singup"
         android:layout_column="0"
         android:layout_row="3"
         android:textSize="@dimen/text_size_20"/>

     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/checkbox1"
         android:layout_column="1"
         android:layout_row="3"/>
 </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_login"
        android:id="@+id/btn_logreg"
        android:onClick="click"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_contacts"
        android:id="@+id/btn_contacts"
        android:onClick="goToSendSMSActivity"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_messege"
            android:id="@+id/btn_messege"
            android:onClick="goToSendSMSActivity"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_push"
            android:id="@+id/btn_push"
            android:onClick="showNotification"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_txt"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="0"
            android:textSize="@dimen/text_size_20"
            android:id="@+id/txt_phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_txt"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="1"
            android:textSize="@dimen/text_size_20"
            android:id="@+id/txt_msg"/>
    </GridLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_exit"
        android:id="@+id/btn_exit"
        android:onClick="showDialog"/>

</LinearLayout>