<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/nameview"
        android:text="@string/name_app_timer"
        android:textSize="@dimen/text_size_20"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:onClick="goToLoginScreen"
            android:text="Back" />

        <Button
            android:id="@+id/btn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:onClick="goToDataList"
            android:text="Dialog"/>

        <Button
            android:id="@+id/btn_fragments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:onClick="goToFragments"
            android:text="Fragments"/>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/button5"
            android:layout_alignBottom="@id/button5"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:onClick="click"
            android:text="UP hour" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/button6"
            android:layout_alignBottom="@id/button6"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="181dp"
            android:text="Down hour"
            android:onClick="click"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="38dp"
            android:text="Up min"
            android:onClick="click"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="157dp"
            android:layout_marginEnd="34dp"
            android:text="Down min"
            android:onClick="click"/>

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignBaseline="@id/min"
            android:layout_alignBottom="@id/min"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="240dp"
            android:text="@string/txt_null_time" />

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="121dp"
            android:text="@string/txt_null_time" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/note"
        android:text="@string/empty_txt"/>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frametimer"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/framedog"
            android:src="@drawable/face_dog"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:onClick="click"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/framecat"
            android:src="@drawable/cat"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:onClick="click"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unicorn"
            android:src="@drawable/unicorn"
            android:scaleType="fitCenter"
            android:onClick="click"/>
    </FrameLayout>

</LinearLayout>